<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.TutorialActivity">

        <View
            android:id="@+id/view_ContainerTitulo_ActivityResumoDaTreta"
            style="@style/ContainerTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtView_Titulo_ActivityResumoDaTreta"
            style="@style/Title"
            android:text="@string/title_activity_city_map"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

<!--view_ContainerBorder_ActivityResumoDaTreta-->

        <View
            android:id="@+id/view_ContainerBorder_ActivityResumoDaTreta"
            style="@style/ContainerCityBackgroundBorder"
            app:layout_constraintTop_toBottomOf="@+id/txtView_Titulo_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imgView_CityBackground_ActivityResumoDaTreta"
            style="@style/ImgCityBackground"
            android:src="@drawable/img_city_background"
            app:layout_constraintTop_toTopOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_ContainerBorder_ActivityResumoDaTreta" />

        <ImageView
            android:id="@+id/imgView_CityMap_ActivityResumoDaTreta"
            android:src="@drawable/img_city_map"
            style="@style/ImgCityMap"
            app:layout_constraintTop_toTopOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"/>

<!--view_Container_ResumoDaTreta_ActivityResumoDaTreta-->

        <View
            android:id="@+id/view_Container_ResumoDaTreta_ActivityResumoDaTreta"
            android:background="@drawable/container_components"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="500dp"
            app:layout_constraintTop_toTopOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@id/view_ContainerBorder_ActivityResumoDaTreta"/>

        <TextView
            android:id="@+id/txtView_InfoTitulo_ActivityResumoDaTreta"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_resumo_da_treta"
            app:layout_constraintTop_toTopOf="@id/view_Container_ResumoDaTreta_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_Container_ResumoDaTreta_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_Container_ResumoDaTreta_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@id/view_Container_ResumoDaTreta_ActivityResumoDaTreta" />

<!--view_Container_StatusJogador_ActivityResumoDaTreta-->

        <View
            android:id="@+id/view_Container_StatusJogador_ActivityResumoDaTreta"
            android:background="@drawable/container_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"/>

        <TextView
            android:id="@+id/txtView_StatusJogador_Tentativas_ActivityResumoDaTreta"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="240dp"
            android:text="@string/game_continue"
            app:layout_constraintTop_toTopOf="@id/view_Container_StatusJogador_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_Container_StatusJogador_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_Container_StatusJogador_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_Container_StatusJogador_ActivityResumoDaTreta"/>


<!--view_ContainerCaracteristicas_ActivityResumoDaTreta-->

        <View
            android:id="@+id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            android:background="@drawable/container_components"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="260dp"
            app:layout_constraintTop_toTopOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"/>

        <TextView
            android:id="@+id/txtView_Cenario_ActivityResumoDaTreta"
            android:drawableRight="@drawable/img_ico_origem_poder_a"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_cenario"
            app:layout_constraintTop_toTopOf="@+id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Problema_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Problema_ActivityResumoDaTreta"
            android:drawableRight="@drawable/img_ico_estilo_a"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_problema"
            app:layout_constraintTop_toBottomOf="@id/txtView_Cenario_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerCaracteristicas_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@id/view_ContainerCaracteristicas_ActivityResumoDaTreta" />

<!--view_ContainerCaracteristicas_ActivityResumoDaTreta-->

        <View
            android:id="@+id/view_ContainerAntagonista_ActivityResumoDaTreta"
            android:background="@drawable/container_components"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="190dp"
            app:layout_constraintTop_toTopOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerBorder_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_ContainerBorder_ActivityResumoDaTreta"/>

        <ImageView
            android:id="@+id/imgView_Antagonista_ActivityResumoDaTreta"
            android:src="@drawable/img_char_silhuete_a"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="300dp"
            app:layout_constraintTop_toTopOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toEndOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@+id/view_ContainerAntagonista_ActivityResumoDaTreta"/>

        <TextView
            android:id="@+id/txtView_Antagonista_Nome_ActivityResumoDaTreta"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_antagonista"
            app:layout_constraintTop_toTopOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_Historico_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_Historico_ActivityResumoDaTreta"
            style="@style/TextView_Text_Descricao"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_antagonista_historico"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_Nome_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_HabilidadesTitulo_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_HabilidadesTitulo_ActivityResumoDaTreta"
            android:drawableLeft="@drawable/img_ico_habilidades"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/game_habilidades_title"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_Historico_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_Habilidade_1_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_Habilidade_1_ActivityResumoDaTreta"
            style="@style/TextView_Text_Descricao"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_habilidade_1"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_HabilidadesTitulo_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_Habilidade_2_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_Habilidade_2_ActivityResumoDaTreta"
            style="@style/TextView_Text_Descricao"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:text="@string/game_habilidade_1"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_Habilidade_1_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_EspecialTitulo_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_EspecialTitulo_ActivityResumoDaTreta"
            android:drawableLeft="@drawable/img_ico_especial"
            style="@style/TextView_Text_Tilulo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/game_especial_title"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_Habilidade_2_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toTopOf="@id/txtView_Antagonista_Especial_ActivityResumoDaTreta" />

        <TextView
            android:id="@+id/txtView_Antagonista_Especial_ActivityResumoDaTreta"
            style="@style/TextView_Text_Descricao"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="60dp"
            android:text="@string/game_especial"
            app:layout_constraintTop_toBottomOf="@id/txtView_Antagonista_EspecialTitulo_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintEnd_toStartOf="@id/imgView_Antagonista_ActivityResumoDaTreta"
            app:layout_constraintBottom_toBottomOf="@id/view_ContainerAntagonista_ActivityResumoDaTreta" />

<!--btn_HeroiDoDia_ActivityResumoDaTreta-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_HeroiDoDia_ActivityResumoDaTreta"
            style="@style/Buttom"
            android:text="@string/btn_hero_select"
            app:layout_constraintTop_toBottomOf="@+id/view_ContainerAntagonista_ActivityResumoDaTreta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>